@@ -1,5 +1,8 @@
 2013-02-26  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/56448
+	* gcc.c-torture/compile/pr56448.c: New test.
+
 	PR tree-optimization/56443
 	* gcc.dg/torture/pr56443.c: New test.
 
